Improved page organization in dom.dbx to fix known XUpdate issues.
svn path=/trunk/eXist-1.0/; revision=288


Former-commit-id: ac28f52fc5b5a91628f8e4cf5ad2b1cfb5235ce2